--- a/templates/index.html
+++ b/templates/index.html
@@ -2,35 +2,10 @@
 <html>
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>日記</title>
-
   <link rel="stylesheet" href="/static/style.css">
   <link rel="stylesheet" href="/static/aos.css">
-
-  <style>
-    /* スクロール演出が映えるように少し間隔をあける */
-    .container {
-      max-width: 800px;
-      margin: 0 auto;
-      padding: 40px 20px;
-    }
-
-    h2 {
-      margin-top: 60px;
-      font-size: 1.4em;
-      color: #555;
-    }
-
-    .entry {
-      margin-bottom: 125px; /*次の日記までの行間*/
-      opacity: 0.95;
-    }
-
-    .content {
-      margin-top: 0.5em;
-      white-space: pre-line;
-    }
-  </style>
 </head>
 <body>
   <div class="container">
