--- a/static/style.css
+++ b/static/style.css
@@ -1,10 +1,30 @@
 body {
-
-  font-family: 'Helvetica', sans-serif;
-  background-color: #f9f9f9;
+  position: relative;
+  /* font-family: 'Noto Serif JP', serif; */
+  font-family: 'Shippori Mincho B1', serif;
+  letter-spacing: 0.10em;
+  background-color: #fdfdfb;
   color: #333;
   padding: 40px 10%;
-  line-height: 1.6;
+  line-height: 2.0;
+  z-index: 0;
+  overflow-x: hidden;
+  font-size: 14px;
+}
+
+body::before {
+  content: "";
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-image: url("/static/paper_texture.png");
+  background-repeat: repeat;
+  background-size: auto;
+  opacity: 0.2;  /* ← ここで透明度を調整 */
+  z-index: -1;
+  pointer-events: none; /* テキスト操作などに影響させない */
 }
 
 h2 {
@@ -22,3 +42,6 @@ h2 {
   margin-top: 0.5em;
   white-space: pre-line;
 }
+
+
+
