--- a/templates/index.html
+++ b/templates/index.html
@@ -1,12 +1,28 @@
 <!DOCTYPE html>
-<html>
+<html lang="ja">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>日記</title>
-  <link rel="stylesheet" href="/static/style.css">
-  <link rel="stylesheet" href="/static/aos.css">
+
+  <!-- CSS -->
+  <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
+  <link rel="stylesheet" href="{{ url_for('static', filename='aos.css') }}">
+
+  <!-- OGP -->
+  <meta property="og:title" content="日記" />
+  <meta property="og:description" content="日々とそこにいる私を忘れないための記録" />
+  <meta property="og:image" content="{{ url_for('static', filename='zou.JPG', _external=True) }}" />
+  <meta property="og:url" content="{{ request.url_root }}" />
+  <meta property="og:type" content="website" />
+
+  <!-- Twitterカード -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="日記" />
+  <meta name="twitter:description" content="日々とそこにいる私を忘れないための記録" />
+  <meta name="twitter:image" content="{{ url_for('static', filename='zou.JPG', _external=True) }}" />
 </head>
+
 <body>
   <div class="container">
     {% for entry in diary %}
@@ -17,7 +33,8 @@
     {% endfor %}
   </div>
 
-  <script src="/static/aos.js"></script>
+  <!-- JS -->
+  <script src="{{ url_for('static', filename='aos.js') }}"></script>
   <script>
     AOS.init({
       duration: 500,
