--- a/templates/index.html
+++ b/templates/index.html
@@ -13,7 +13,7 @@
   <!-- OGP -->
   <meta property="og:title" content="日記" />
   <meta property="og:description" content="日々とそこにいる私を忘れないための記録" />
-  <meta property="og:image" content="{{ url_for('static', filename='zou.JPG', _external=True, _scheme='https') }}" />
+  <meta property="og:image" content="{{ url_for('static', filename='zou.jpg', _external=True, _scheme='https') }}" />
   <meta property="og:url" content="{{ request.url_root | replace('http://', 'https://') }}" />
   <meta property="og:type" content="website" />
   <meta property="og:site_name" content="私の日記サイト" />
@@ -23,7 +23,7 @@
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="日記" />
   <meta name="twitter:description" content="日々とそこにいる私を忘れないための記録" />
-  <meta name="twitter:image" content="{{ url_for('static', filename='zou.JPG', _external=True, _scheme='https') }}" />
+  <meta name="twitter:image" content="{{ url_for('static', filename='zou.jpg', _external=True, _scheme='https') }}" />
   <meta name="twitter:site" content="@aso_aaaaa" />
 </head>
 
