--- a/templates/index.html
+++ b/templates/index.html
@@ -25,6 +25,16 @@
   <meta name="twitter:description" content="日々とそこにいる私を忘れないための記録" />
   <meta name="twitter:image" content="{{ url_for('static', filename='zou.jpg', _external=True, _scheme='https') }}" />
   <meta name="twitter:site" content="@aso_aaaaa" />
+
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-LR4KH39PNY"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){ dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'G-LR4KH39PNY');
+  </script>
 </head>
 
 <body>
