--- a/templates/index.html
+++ b/templates/index.html
@@ -16,7 +16,7 @@
   <meta property="og:image" content="{{ url_for('static', filename='zou.jpg', _external=True, _scheme='https') }}" />
   <meta property="og:url" content="{{ request.url_root | replace('http://', 'https://') }}" />
   <meta property="og:type" content="website" />
-  <meta property="og:site_name" content="私の日記サイト" />
+  <meta property="og:site_name" content="日記" />
   <meta property="og:locale" content="ja_JP" />
 
   <!-- Twitterカード -->
