--- a/templates/index.html
+++ b/templates/index.html
@@ -56,5 +56,14 @@
       once: false
     });
   </script>
+
+  <!-- Navigation -->
+  <nav style="margin-bottom: 40px;">
+    <a href="/" style="margin-right: 1em;">page1</a>
+    <a href="/page2" style="margin-right: 1em;">page2</a>
+    <!-- <a href="/page3" style="margin-right: 1em;">page3</a> -->
+    <!-- <a href="/page4" style="margin-right: 1em;">page4</a> -->
+  </nav>
+
 </body>
 </html>
