--- a/templates/index.html
+++ b/templates/index.html
@@ -56,6 +56,9 @@
     {% endfor %}
   </div>
 
+  <!-- 縦棒 -->
+  <div class="diary-divider" aria-hidden="true" data-aos="fade-up"></div>
+
   <!-- Pager: 最下部ナビゲーション（既存トンマナに合わせた最小UI） -->
   <div class="pager" data-aos="fade-up" aria-label="Pagination">
     {% if current_page > 1 %}
