--- a/templates/index.html
+++ b/templates/index.html
@@ -48,9 +48,11 @@
 <body>
 
   <!-- Shuffleボタン -->
-  <button id="shuffle-btn" title="日記をランダムに並べ替え">
+<button id="shuffle-btn" title="日記をランダムに並べ替え">
+  <span class="icon-wrap">
     <img src="{{ url_for('static', filename='shuffle_icon.png') }}" alt="Shuffle" />
-  </button>
+  </span>
+</button>
 
   <!-- 日記本体 -->
   <div class="container">
